tests/snapshots/tui_snapshot__tui_scrolled_viewport.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  Pi (dummy/dummy-model)
  ctrl+l: model  ctrl+p: next  ctrl+shift+p: prev  ctrl+o: tools  shift+tab: ...
  resources: 0 skills, 0 prompts, 0 themes, 0 extensions




  You: User message 10

  Assistant:

    Assistant reply 10



  You: User message 11
  [85%] ↑/↓ PgUp/PgDn Shift+Up/Down to scroll

  Enter: send  Shift+Enter: newline  Alt+Enter: multi-line  [thinking: off]
  │ > Type a message... (/help, /exit)
  │ >
  │ >

  Tokens: 0 in / 0 out  |  Persist: balanced  |  /help  |  Ctrl+C: quit
